# kdynamic

./: CMakeLists.txt  README.md  deformationGraph.cpp  deformationGraph.h  fusion.cu  fusion.h  graphNode.h  helpers.cu  helpers.h  kinect.cpp
test/: CMakeLists.txt  CMakeLists.txt~  test.cpp  test.cpp~
